--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
   <body>
     <header>
       <nav>
-        <a href="#">webstudio</a>
+        <a href="./index.html">WebStudio</a>
 
         <ul>
           <li>
-            <a href="#">Studio</a>
+            <a href="">Studio</a>
           </li>
 
           <li>
-            <a href="#">Portfolio</a>
+            <a href="">Portfolio</a>
           </li>
 
           <li>
-            <a href="#">Contacts</a>
+            <a href="">Contacts</a>
           </li>
         </ul>
       </nav>
@@ -112,40 +112,30 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img
-              src="./images/teamcard1.jpg"
-              alt="Mark Guerrero"
-              width="264"
-            /><span>Mark Guerrero</span>
+            <img src="./images/teamcard1.jpg" alt="Mark Guerrero" width="264" />
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/teamcard2.jpg" alt="Tom Ford" width="264" /><span
-              >Tom Ford</span
-            >
+            <img src="./images/teamcard2.jpg" alt="Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img
-              src="./images/teamcard3.jpg"
-              alt="Camila Garcia"
-              width="264"
-            /><span>Camila Garcia</span>
+            <img src="./images/teamcard3.jpg" alt="Camila Garcia" width="264" />
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
-            <img
-              src="./images/teamcard4.jpg"
-              alt="Daniel Wilson"
-              width="264"
-            /><span>Daniel Wilson</span>
+            <img src="./images/teamcard4.jpg" alt="Daniel Wilson" width="264" />
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer>
-      <a href="#">webstudio</a>
+      <a href="">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
